# VotV-Satellites

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ci.sh  pyproject.toml
.github/workflows/: ci.yml  tests.yml
src/votv_satellites/: __init__.py  shortest_path.py  vector.py
src/votv_satellites/data/: locations.txt
tests/: test_result.py  test_vector.py
